# pycharm-editable-packages-bug

./: README.md  pycharm-editable-packages.code-workspace
my-lib/: pyproject.toml
my-lib/my_lib/: utils.py
my-runtime/: README.md  pyproject.toml
my-runtime/my_runtime/: main.py
