[tool.poetry]
name = "my-lib"
version = "0.1.0"
description = ""
authors = ["Xavier Bergeron <xavbergeron@gmail.com>"]
readme = "README.md"
packages = [{ include = "my_lib", from = "." }]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
