[tool.poetry]
name = "my-runtime"
version = "0.1.0"
description = ""
authors = ["Xavier Bergeron <xavbergeron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
my-lib = { path = "../my-lib", develop = true  }


python = "^3.9"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
